Bug 402931 - Multi-row messages are unreadable in the Translation Units
Summary: Multi-row messages are unreadable in the Translation Units
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
: 404170 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-06 16:15 UTC by Paolo Zamponi
Modified: 2019-02-10 12:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.3
Sentry Crash Report:


Attachments
Translation Units (96.42 KB, image/png)
2019-01-06 16:15 UTC, Paolo Zamponi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paolo Zamponi 2019-01-06 16:15:00 UTC
Created attachment 117308 [details]
Translation Units

Hi all, since Lokalize has been updated to 18.12 I notice the strange behaviour I write in title; referring to my screenshot I'm talking about messages 635 and 637 in the "Unità di traduzione", the others are 1-row only. If I open them they are ok, as you can see.

STEPS TO REPRODUCE
1. Open Lokalize and choose a .po file with some message longer than a row;
2. Look at "Translation Units".

OBSERVED RESULT
It seems it want to display a "preview" of the message instead of its beginning.

EXPECTED RESULT
It would be better to have only the first words of a long message.

SOFTWARE/OS VERSIONS
KDE Plasma Version:  5.14.4
KDE Frameworks Version: 5.53
Qt Version: 5.12.0
Comment 1 Simon Depiets 2019-02-05 10:39:40 UTC
Git commit 61d1d9a0df16ac5d82afa867cd7b00f8da263a44 by Simon Depiets.
Committed on 05/02/2019 at 10:36.
Pushed by sdepiets into branch 'master'.

Only display the first line of messages in the catalog

M  +4    -4    src/catalog/catalog.cpp
M  +2    -2    src/catalog/catalog.h
M  +2    -2    src/catalog/catalogstorage.h
M  +34   -6    src/catalog/gettext/gettextstorage.cpp
M  +2    -2    src/catalog/gettext/gettextstorage.h
M  +19   -5    src/catalog/ts/tsstorage.cpp
M  +2    -2    src/catalog/ts/tsstorage.h
M  +18   -4    src/catalog/xliff/xliffstorage.cpp
M  +2    -2    src/catalog/xliff/xliffstorage.h
M  +3    -3    src/cataloglistview/catalogmodel.cpp

https://commits.kde.org/lokalize/61d1d9a0df16ac5d82afa867cd7b00f8da263a44
Comment 2 Simon Depiets 2019-02-05 10:48:31 UTC
Git commit d9ceed7f6ed42f49ee042a1132ab0f7efbf061da by Simon Depiets.
Committed on 05/02/2019 at 10:40.
Pushed by sdepiets into branch 'Applications/18.12'.

Only display the first line of messages in the catalog

M  +4    -4    src/catalog/catalog.cpp
M  +2    -2    src/catalog/catalog.h
M  +2    -2    src/catalog/catalogstorage.h
M  +34   -6    src/catalog/gettext/gettextstorage.cpp
M  +2    -2    src/catalog/gettext/gettextstorage.h
M  +19   -5    src/catalog/ts/tsstorage.cpp
M  +2    -2    src/catalog/ts/tsstorage.h
M  +18   -4    src/catalog/xliff/xliffstorage.cpp
M  +2    -2    src/catalog/xliff/xliffstorage.h
M  +3    -3    src/cataloglistview/catalogmodel.cpp

https://commits.kde.org/lokalize/d9ceed7f6ed42f49ee042a1132ab0f7efbf061da
Comment 3 Simon Depiets 2019-02-10 12:12:00 UTC
*** Bug 404170 has been marked as a duplicate of this bug. ***