Only display the first line of messages in the catalog

BUG:402931